argo/apps/docmost/pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docmost
