argo/apps/docmost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docmost
  namespace: docmost
spec:
  selector:
    app: docmost
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
