argo/apps/docmost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docmost
  namespace: docmost
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: docs.smeyer.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docmost
                port:
                  number: 80
  tls:
    - certResolver: letsencrypt
